Prevent horizontal scrolling in properties panel (#188)

--- a/assets/css/_vehicle_properties_panel.scss
+++ b/assets/css/_vehicle_properties_panel.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   height: 100%;
   max-width: 100%;
+  overflow-x: hidden;
   overflow-y: scroll;
   position: fixed;
   right: 0;
